2007-04-04    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_postfork): cosmetics: again typo in PID
	printing removed (now in waitchild) and SOCKLINGER_NR was 0..n-1,
	correct to 1..n (now based on child_findfree).
	(socklinger_dosock): sleep replaced by tino_relax()
	(socklinger_error): added for support of option -1
	(socklinger_child_findfree, socklinger_waitchild)
	(socklinger_forkchild): added as generalized parts for pre- and
	postfork
	(socklinger_prefork, socklinger_postfork): changed to use new
	routines (which support ignerr)

2007-04-03    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_postfork, socklinger_prefork): delay
	added (now in waitchild())

2007-04-02    <tino@firebird.03.softkill.net>

	* socklinger.c (process_args): delay added

2006-12-12    <tino@firebird.03.softkill.net>

	* BUGS: updated

	* diet: Softlink deleted, no "make static"

	* Makefile.tino: re-created with tino/setuptino.sh

	* example/portcullis.sh: completed (hopefully)

2006-09-16  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (main): bugfix: if @ was missing (like in IPs), cnt
	was set.

2006-09-08  U-KOSH\Administrator  <Administrator@KOSH>

	* socklinger.c (socklinger_prefork, socklinger_postfork): added as
	CygWin fix.  Change usage such, that '-n@' gives alternate fork
	method and '>' creates the connect variant.
	
2006-06-17    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): SOCKLINGER_SOCK added to environment
	(socklinger): Now correct exist status is printed

2006-02-09    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger): close socket on forked connection
	(main): additional socket close here, too.

2006-01-25    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): HUP control added

2006-01-24    <tino@firebird.03.softkill.net>

	* socklinger.c (socklinger_accept): If SYN/RST was found or
	something similar weird happened, then accept returns "broken